--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,13 @@
-cmake_minimum_required(VERSION 3.26)
+cmake_minimum_required(VERSION 3.22.1)
 project(Project2 C)
 
 set(CMAKE_C_STANDARD 11)
 
 add_executable(Project2 main.c
         main.h
-        main.h
         config.c
-        config.h
         config.h
         find_files.c
         find_files.h
-        find_files.h)
+        updateFiles.c
+        updateFiles.h)
